unpackaged/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Region_and_Area__c</fullName>
        <label>エリア</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Genzaichi__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>アジア</fullName>
                </value>
                <value>
                    <fullName>北米</fullName>
                </value>
                <value>
                    <fullName>中南米</fullName>
                </value>
                <value>
                    <fullName>欧州</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>中東</fullName>
                </value>
                <value>
                    <fullName>アフリカ</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RequestNaiyo__c</fullName>
        <label>依頼内容</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RescueCost__c</fullName>
        <label>救援者費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ResideKeitai__c</fullName>
        <label>在留形態</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>旅行者</fullName>
                </value>
                <value>
                    <fullName>在留邦人</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceAreaCd__c</fullName>
        <formula>IF ( ISBLANK( MemberName__c ) = FALSE,  MemberName__r.ServiceAreaCd__c ,  IF (  ISBLANK(MemberFamilyName__c) = FALSE ,  MemberFamilyName__r.ServiceAreaCd__c , &quot;&quot;) )</formula>
        <label>サービスエリアコード</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>性別</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>男</fullName>
                </value>
                <value>
                    <fullName>女</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShokenNo__c</fullName>
        <label>証券番号</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shori__c</fullName>
        <label>処理方法</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>通訳手配</fullName>
                </value>
                <value>
                    <fullName>病院手配</fullName>
                </value>
                <value>
                    <fullName>担保書</fullName>
                </value>
                <value>
                    <fullName>外地手配</fullName>
                </value>
                <value>
                    <fullName>病院紹介</fullName>
                </value>
                <value>
                    <fullName>相談応答</fullName>
                </value>
                <value>
                    <fullName>地図FAX・メール</fullName>
                </value>
                <value>
                    <fullName>払い戻しFAX/メール</fullName>
                </value>
                <value>
                    <fullName>担当者</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
                <value>
                    <fullName>業者限りで処理</fullName>
                </value>
                <value>
                    <fullName>業者経由で転送</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SpecialNote__c</fullName>
        <label>特記事項</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupportCompletedDate__c</fullName>
        <label>対応完了日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SupportDoctor__c</fullName>
        <label>対応医師</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>小林 昌明</fullName>
                </value>
                <value>
                    <fullName>徳永 雄一郎</fullName>
                </value>
                <value>
                    <fullName>中島 宏昭</fullName>
                </value>
                <value>
                    <fullName>大利 昌久</fullName>
                </value>
                <value>
                    <fullName>柳澤 和彦</fullName>
                </value>
                <value>
                    <fullName>藤田 紘一郎</fullName>
                </value>
                <value>
                    <fullName>石﨑 浩之</fullName>
                </value>
                <value>
                    <fullName>中村 雅典</fullName>
                </value>
                <value>
                    <fullName>劉 衛東</fullName>
                </value>
                <value>
                    <fullName>張 衛星</fullName>
                </value>
                <value>
                    <fullName>章 桂紅</fullName>
                </value>
                <value>
                    <fullName>佐井 優見</fullName>
                </value>
                <value>
                    <fullName>金 晓杰</fullName>
                </value>
                <value>
                    <fullName>楊 献紅</fullName>
                </value>
                <value>
                    <fullName>田野島 美城</fullName>
                </value>
                <value>
                    <fullName>タナカ千恵子</fullName>
                </value>
                <value>
                    <fullName>菅根 一男</fullName>
                </value>
                <value>
                    <fullName>竹内 正宣</fullName>
                </value>
                <value>
                    <fullName>若林 俊彦</fullName>
                </value>
                <value>
                    <fullName>井澤 英夫</fullName>
                </value>
                <value>
                    <fullName>須藤 英一</fullName>
                </value>
                <value>
                    <fullName>大谷 茂</fullName>
                </value>
                <value>
                    <fullName>日野ひとみ</fullName>
                </value>
                <value>
                    <fullName>長田尚彦</fullName>
                </value>
                <value>
                    <fullName>佐藤春城</fullName>
                </value>
                <value>
                    <fullName>なし</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportShubetsu__c</fullName>
        <inlineHelpText>旧援護種別</inlineHelpText>
        <label>照会・相談内容</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>事故</fullName>
                </value>
                <value>
                    <fullName>災害</fullName>
                </value>
                <value>
                    <fullName>犯罪加害</fullName>
                </value>
                <value>
                    <fullName>犯罪被害</fullName>
                </value>
                <value>
                    <fullName>疾病・精神障害</fullName>
                </value>
                <value>
                    <fullName>死亡</fullName>
                </value>
                <value>
                    <fullName>行方不明</fullName>
                </value>
                <value>
                    <fullName>困窮</fullName>
                </value>
                <value>
                    <fullName>旅券</fullName>
                </value>
                <value>
                    <fullName>査証出入国</fullName>
                </value>
                <value>
                    <fullName>開館日</fullName>
                </value>
                <value>
                    <fullName>生活法律相談</fullName>
                </value>
                <value>
                    <fullName>その他</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Symptom__c</fullName>
        <label>症状</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MedicalCareDepartment__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>循環器</fullName>
                </value>
                <value>
                    <fullName>呼吸器</fullName>
                </value>
                <value>
                    <fullName>消化器</fullName>
                </value>
                <value>
                    <fullName>代謝栄養内分泌疾患</fullName>
                </value>
                <value>
                    <fullName>血液疾患</fullName>
                </value>
                <value>
                    <fullName>腎尿路疾患</fullName>
                </value>
                <value>
                    <fullName>神経疾患</fullName>
                </value>
                <value>
                    <fullName>感染症寄生虫疾患</fullName>
                </value>
                <value>
                    <fullName>自己免疫ｱﾚﾙｷﾞｰ疾患</fullName>
                </value>
                <value>
                    <fullName>中毒性疾患</fullName>
                </value>
                <value>
                    <fullName>健診</fullName>
                </value>
                <value>
                    <fullName>心臓血管</fullName>
                </value>
                <value>
                    <fullName>乳腺</fullName>
                </value>
                <value>
                    <fullName>内分泌</fullName>
                </value>
                <value>
                    <fullName>血液リンパ系</fullName>
                </value>
                <value>
                    <fullName>外傷一般</fullName>
                </value>
                <value>
                    <fullName>形成</fullName>
                </value>
                <value>
                    <fullName>骨折</fullName>
                </value>
                <value>
                    <fullName>捻挫脱臼</fullName>
                </value>
                <value>
                    <fullName>骨筋肉関節軟部組織</fullName>
                </value>
                <value>
                    <fullName>頚椎胸椎腰椎</fullName>
                </value>
                <value>
                    <fullName>骨軟部腫瘍</fullName>
                </value>
                <value>
                    <fullName>脳腫瘍</fullName>
                </value>
                <value>
                    <fullName>脳血管障害</fullName>
                </value>
                <value>
                    <fullName>頭部外傷</fullName>
                </value>
                <value>
                    <fullName>血液内分泌免疫代謝疾患</fullName>
                </value>
                <value>
                    <fullName>感染症</fullName>
                </value>
                <value>
                    <fullName>ｱﾚﾙｷﾞｰ疾患</fullName>
                </value>
                <value>
                    <fullName>先天異常</fullName>
                </value>
                <value>
                    <fullName>心療内科発達傷害</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaikaiDate__c</fullName>
        <label>退会日付</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TehaiEndTime__c</fullName>
        <description>手配終了時間</description>
        <inlineHelpText>時間は、00.00の形式で入力して下さい。
24時は、0.00で入力してください。
例）10時30分は、10.30。　午後1時30分は、13.30。</inlineHelpText>
        <label>終了時間</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tel__c</fullName>
        <label>TEL</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>タイトル</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToujishaGenzaichiMofa__c</fullName>
        <label>当事者-現在地</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToujishaRelation__c</fullName>
        <label>当事者との関係</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToujishaRome__c</fullName>
        <label>当事者（ローマ字）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Toujisha__c</fullName>
        <label>当事者（漢字／カナ）</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer__c</fullName>
        <label>連絡相手</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TreatmentCost__c</fullName>
        <label>治療費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TreatmentRescueCost__c</fullName>
        <label>治療・救援者費用</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UketsukeDate__c</fullName>
        <label>受付日付</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UketsukeTime_H__c</fullName>
        <formula>FLOOR(UketsukeTime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>受付時間_H</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UketsukeTime__c</fullName>
        <inlineHelpText>時間は、00.00の形式で入力して下さい。
24時は、0.00で入力してください。
例）10時30分は、10.30。　午後1時30分は、13.30。</inlineHelpText>
        <label>受付時間</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WaitingPeriodConfirm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>待機・解約確認OK</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WbDoctorNaiyo__c</fullName>
        <label>WB⇔医師やりとり</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Youbi__c</fullName>
        <formula>CASE(MOD( UketsukeDate__c  -DATE(1900, 1, 7), 7), 0, &quot;0 日&quot;, 1, &quot;1 月&quot;, 2, &quot;2 火&quot;, 3, &quot;3 水&quot;, 4, &quot;4 木&quot;, 5, &quot;5 金&quot;, 6,&quot;6 土&quot;,&quot;Error&quot;)</formula>
        <label>曜日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>away__c</fullName>
        <label>外地名</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Genzaichi__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>瀋陽</fullName>
                </value>
                <value>
                    <fullName>煙台</fullName>
                </value>
                <value>
                    <fullName>長春</fullName>
                </value>
                <value>
                    <fullName>包頭</fullName>
                </value>
                <value>
                    <fullName>済南</fullName>
                </value>
                <value>
                    <fullName>唐山</fullName>
                </value>
                <value>
                    <fullName>秦皇島</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>無錫</fullName>
                </value>
                <value>
                    <fullName>杭州</fullName>
                </value>
                <value>
                    <fullName>昆山</fullName>
                </value>
                <value>
                    <fullName>平湖</fullName>
                </value>
                <value>
                    <fullName>張家港</fullName>
                </value>
                <value>
                    <fullName>武漢</fullName>
                </value>
                <value>
                    <fullName>重慶</fullName>
                </value>
                <value>
                    <fullName>寧波</fullName>
                </value>
                <value>
                    <fullName>成都</fullName>
                </value>
                <value>
                    <fullName>十堰</fullName>
                </value>
                <value>
                    <fullName>襄陽</fullName>
                </value>
                <value>
                    <fullName>鄭州</fullName>
                </value>
                <value>
                    <fullName>南通</fullName>
                </value>
                <value>
                    <fullName>常州</fullName>
                </value>
                <value>
                    <fullName>常熟</fullName>
                </value>
                <value>
                    <fullName>南京</fullName>
                </value>
                <value>
                    <fullName>合肥</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>x00</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>アラームセンター</value>
        </filters>
        <label>00. AC（オープン）</label>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x00AC</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MemberName__c</field>
            <operation>contains</operation>
            <value>アルプス</value>
        </filters>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>greaterThan</operation>
            <value>7/13/2008</value>
        </filters>
        <label>90. アルプス1</label>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x01AC</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>アラームセンター</value>
        </filters>
        <label>01. AC（今日）</label>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x02AC</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>アラームセンター,ハノイアラーム</value>
        </filters>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>02. AC（昨日）</label>
        <language>ja</language>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x03AC1</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>アラームセンター</value>
        </filters>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>03. AC（過去1週間）</label>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x10</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>ハノイアラーム</value>
        </filters>
        <label>10. ハノイ（オープン）</label>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x11</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>ハノイアラーム</value>
        </filters>
        <label>11. ハノイ（今日）</label>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x12</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>ハノイアラーム</value>
        </filters>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>12. ハノイ（昨日）</label>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x131</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>MemberNo__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>ハノイアラーム</value>
        </filters>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>13. ハノイ（過去1週間）</label>
        <sharedTo>
            <group>AC735531</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x20</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ReceiptLine__c</columns>
        <columns>UketsukeDate__c</columns>
        <columns>UketsukeTime__c</columns>
        <columns>Toujisha__c</columns>
        <columns>CASES.REASON</columns>
        <columns>SupportShubetsu__c</columns>
        <columns>Shori__c</columns>
        <columns>Receipt__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>在中国日本大使館,上海領事館,瀋陽領事館,大連出張駐在官事務所,重慶領事館,広州領事館,香港領事館</value>
        </filters>
        <label>20. 大使館（オープン）</label>
        <sharedTo>
            <group>AC735532</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x21</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ReceiptLine__c</columns>
        <columns>UketsukeDate__c</columns>
        <columns>UketsukeTime__c</columns>
        <columns>Toujisha__c</columns>
        <columns>CASES.REASON</columns>
        <columns>SupportShubetsu__c</columns>
        <columns>Shori__c</columns>
        <columns>Receipt__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>在中国日本大使館,上海領事館,瀋陽領事館,大連出張駐在官事務所,重慶領事館,広州領事館,香港領事館</value>
        </filters>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>21. 大使館（今日）</label>
        <sharedTo>
            <group>AC735532</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x22</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ReceiptLine__c</columns>
        <columns>UketsukeDate__c</columns>
        <columns>UketsukeTime__c</columns>
        <columns>Toujisha__c</columns>
        <columns>CASES.REASON</columns>
        <columns>SupportShubetsu__c</columns>
        <columns>Shori__c</columns>
        <columns>Receipt__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>在中国日本大使館,上海領事館,瀋陽領事館,大連出張駐在官事務所,重慶領事館,広州領事館,香港領事館</value>
        </filters>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>22. 大使館（昨日）</label>
        <sharedTo>
            <group>AC735532</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x23</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ReceiptLine__c</columns>
        <columns>UketsukeDate__c</columns>
        <columns>UketsukeTime__c</columns>
        <columns>Toujisha__c</columns>
        <columns>CASES.REASON</columns>
        <columns>SupportShubetsu__c</columns>
        <columns>Shori__c</columns>
        <columns>Receipt__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>在中国日本大使館,上海領事館,瀋陽領事館,大連出張駐在官事務所,重慶領事館,広州領事館,香港領事館,青島領事館</value>
        </filters>
        <label>23. 大使館（今月）</label>
        <sharedTo>
            <group>AC735532</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x24</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ReceiptLine__c</columns>
        <columns>UketsukeDate__c</columns>
        <columns>UketsukeTime__c</columns>
        <columns>Toujisha__c</columns>
        <columns>CASES.REASON</columns>
        <columns>SupportShubetsu__c</columns>
        <columns>Shori__c</columns>
        <columns>Receipt__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UketsukeDate__c</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>在中国日本大使館,上海領事館,瀋陽領事館,大連出張駐在官事務所,重慶領事館,広州領事館,香港領事館,青島領事館</value>
        </filters>
        <label>24. 大使館（先月）</label>
        <sharedTo>
            <group>AC735532</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>x30SJ</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>UketsukeDate__c</columns>
        <columns>UketsukeTime__c</columns>
        <columns>Toujisha__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Hospital__c</columns>
        <columns>Receipt__c</columns>
        <columns>ReceiptLine__c</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ReceiptLine__c</field>
            <operation>equals</operation>
            <value>SJ中国</value>
        </filters>
        <label>30. SJ中国（オープン）</label>
        <sharedTo>
            <group>AC735532</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>BL</fullName>
        <active>true</active>
        <businessProcess>BL</businessProcess>
        <label>BL</label>
    </recordTypes>
    <recordTypes>
        <fullName>BLMedical</fullName>
        <active>true</active>
        <businessProcess>BL%28医療%29</businessProcess>
        <label>BL(医療)</label>
    </recordTypes>
    <recordTypes>
        <fullName>KenkoSodan</fullName>
        <active>true</active>
        <businessProcess>健康相談</businessProcess>
        <label>健康相談</label>
    </recordTypes>
    <recordTypes>
        <fullName>MitsuiMarine</fullName>
        <active>true</active>
        <businessProcess>三井マリン</businessProcess>
        <label>三井マリン</label>
    </recordTypes>
    <recordTypes>
        <fullName>MitsuiSumitomo</fullName>
        <active>true</active>
        <businessProcess>三井住友</businessProcess>
        <label>三井住友</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <businessProcess>メディック</businessProcess>
        <label>メディック</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypeCambodiaMofa</fullName>
        <active>true</active>
        <businessProcess>カンボジア大使館</businessProcess>
        <label>カンボジア大使館</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypeIndiaMofa</fullName>
        <active>false</active>
        <businessProcess>インド大使館</businessProcess>
        <label>インド大使館</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordTypeKoreaMofa</fullName>
        <active>false</active>
        <businessProcess>韓国大使館</businessProcess>
        <label>韓国大使館</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType_d_2</fullName>
        <active>true</active>
        <businessProcess>大使館</businessProcess>
        <label>大使館</label>
    </recordTypes>
    <recordTypes>
        <fullName>SJ</fullName>
        <active>true</active>
        <businessProcess>SJ中国</businessProcess>
        <label>SJ中国</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CheckTime_FinalDestination</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( OR(FLOOR(  M_FinalDestination_Time__c  ) &gt; 23,M_FinalDestination_Time__c - FLOOR( M_FinalDestination_Time__c ) &gt; 0.60) , true, false)</errorConditionFormula>
        <errorMessage>Final DestinationのTimeが正しくありません。</errorMessage>
    </validationRules>
</CustomObject>